implement delete movie functionality

--- a/test-server/client/src/styles.css
+++ b/test-server/client/src/styles.css
@@ -6,6 +6,31 @@
   color: #333;
 }
 
+form {
+  border: 1px solid #333;
+  padding: 10px;
+  margin: 5px;
+}
+
+input {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #333;
+  border-radius: 8px;
+  margin: 5px;
+}
+
+button {
+  padding: 5px;
+  border-radius: 4px;
+  margin: 5px;
+}
+
+.delete-btn {
+  background-color: rgb(156, 76, 76);
+  color: whitesmoke;
+}
+
 h1 {
   margin: 5px;
 }
