--- a/test-server/client/src/styles.css
+++ b/test-server/client/src/styles.css
@@ -31,6 +31,10 @@ button {
   color: whitesmoke;
 }
 
+.edit-btn {
+  background-color: cornflowerblue;
+  color: whitesmoke;
+}
 h1 {
   margin: 5px;
 }
